<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">

    <LinearLayout
        android:id="@+id/ll_query_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stationHint"
            android:id="@+id/et_stationCode"
            android:maxLength="3"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_viewStationCodes"
                android:text="@string/btnLookUp"
                />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"/>
        </LinearLayout>

        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:indeterminate="true"
            android:id="@+id/pb_loadingWheel"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_stationDisplay"
            android:textSize="22sp"
            android:gravity="center_horizontal"
            android:text="@string/stationDisplayDefault"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:id="@+id/ll_labels"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_query_layout">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trainNo"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:id="@+id/tv_trainNoLbl"
        android:layout_gravity="center"
        android:textSize="18sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dueAt"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:id="@+id/tv_dueAtLbl"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/status"
            android:gravity="center_horizontal"
            android:id="@+id/tv_statusLbl"
            android:textSize="18sp"/>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_trainInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_labels"
        android:layout_margin="0dp">
    </ListView>



</RelativeLayout>
