<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stationCodeLbl"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_stationCode"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/ll_labels"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_query_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trainNo"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:id="@+id/tv_trainNoLbl"
            android:layout_gravity="center"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dueAt"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:id="@+id/tv_dueAtLbl"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/status"
            android:gravity="center_horizontal"
            android:id="@+id/tv_statusLbl"
            android:textSize="18sp"/>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/lv_favoriteStationTrains" />

</LinearLayout>

